--- a/_config.yaml
+++ b/_config.yaml
@@ -1,5 +1,5 @@
 # site properties and page defaults
-title: justen-saini
+title: justen-saini1
 subtitle: 
 description: An engaging 1-3 sentence description of your lab.
 header: images/background.jpg
