--- a/_config.yaml
+++ b/_config.yaml
@@ -1,7 +1,7 @@
 # site properties and page defaults
-title: justen-saini1
+title: justen-saini
 subtitle: 
-description: An engaging 1-3 sentence description of your lab.
+description: An engaging 1-2 sentence description of your lab.
 header: images/background.jpg
 footer: images/background.jpg
 proofer: false
