--- a/_config.yaml
+++ b/_config.yaml
@@ -2,8 +2,8 @@
 title: justen-saini
 subtitle: 
 description: An engaging 1-5 sentence description of your lab.
-header: images/background.jpg
-footer: images/background.jpg
+header: images/DF_background.jpg
+footer: images/DF_background.jpg
 proofer: false
 
 # site social media and other links
