--- a/_config.yaml
+++ b/_config.yaml
@@ -1,6 +1,6 @@
 # site properties and page defaults
-title: justen-saini
-subtitle: 
+title: LIMB Lab
+subtitle: Locomotion & Imaging of Musculoskeletal Biomechanics
 description: An engaging 1-5 sentence description of your lab.
 header: images/DF_background.jpg
 footer: images/DF_background.jpg
