--- a/_config.yaml
+++ b/_config.yaml
@@ -8,7 +8,7 @@ proofer: false
 
 # site social media and other links
 links:
-  email: contact@justen-saini.com
+  email: koren.roach@ucalgary.ca
   orcid: 0000-0001-8713-9213
   google-scholar: ETJoidYAAAAJ
   github: justen-saini
