--- a/_config.yaml
+++ b/_config.yaml
@@ -9,11 +9,11 @@ proofer: false
 # site social media and other links
 links:
   email: koren.roach@ucalgary.ca
-  orcid: 0000-0001-8713-9213
-  google-scholar: ETJoidYAAAAJ
-  github: justen-saini
-  twitter: justen-saini
-  youtube: justen-saini
+#  orcid: 0000-0001-8713-9213
+  google-scholar: CCjfN8MAAAAJ
+#  github: justen-saini
+#  twitter: justen-saini
+#  youtube: justen-saini
 
 ### jekyll settings
 
